<package>
  <name>niryo_robot_msgs</name>
  <version>3.2.0</version>
  <description>Niryo "Standards messages" used in other Niryo Robot packages</description>
  <author email="r.lux@niryo.com">Rémi Lux</author>
  <maintainer email="r.lux@niryo.com">Rémi Lux</maintainer>
  <maintainer email="c.ducatez@niryo.com">Corentin Ducatez</maintainer>
  <maintainer email="v.pitre@niryo.com">Valentin Pitre</maintainer>
  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
