<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>niryo_robot_msgs</name>
  <version>5.0.0</version>
  <description>Niryo "Standards messages" used in other Niryo Robot packages</description>
  <maintainer email="r.lux@niryo.com">Rémi Lux</maintainer>
  <maintainer email="c.ducatez@niryo.com">Corentin Ducatez</maintainer>
  <maintainer email="v.pitre@niryo.com">Valentin Pitre</maintainer>
  <license>GPLv3</license>
  <author email="r.lux@niryo.com">Rémi Lux</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <test_depend>python3-catkin-lint</test_depend>
</package>
