<package>
    <name>niryo_robot_poses_handlers</name>
    <version>3.1.1</version>
    <description>
        - Handles the conversion of workspace-relative poses to robot poses
        - Handles Poses
        - Handles Trajectories
    </description>
    <author>Andreas Voigt</author>
    <author email="r.lux@niryo.com">Rémi Lux</author>
    <maintainer email="r.lux@niryo.com">Rémi Lux</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>geometry_msgs</build_depend>
    <build_depend>moveit_msgs</build_depend>
    <build_depend>niryo_robot_msgs</build_depend>

    <run_depend>moveit_msgs</run_depend>
    <run_depend>niryo_robot_msgs</run_depend>
    <run_depend>tf</run_depend>

    <!-- Python Dependencies -->
    <run_depend>python-numpy</run_depend>

    <export>
    </export>
</package>
