<package>
    <name>niryo_robot_poses_handlers</name>
    <version>3.2.0</version>
    <description>
        - Handles the conversion of workspace-relative poses to robot poses
        - Handles Poses
        - Handles Trajectories
    </description>
    <author>Andreas Voigt</author>
    <author email="r.lux@niryo.com">Rémi Lux</author>
    <maintainer email="r.lux@niryo.com">Rémi Lux</maintainer>
    <maintainer email="v.pitre@niryo.com">Valentin Pitre</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>geometry_msgs</build_depend>
    <build_depend>moveit_msgs</build_depend>
    <build_depend>niryo_robot_msgs</build_depend>
    <build_depend>rostest</build_depend>
    <build_depend>message_generation</build_depend>


    <run_depend>moveit_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>tf</run_depend>

    <!-- Niryo Dependencies -->
    <run_depend>niryo_robot_msgs</run_depend>
    <run_depend>niryo_robot_tools_commander</run_depend>

    <!-- Python Dependencies -->
    <run_depend>python-numpy</run_depend>

    <export>
    </export>
</package>
