<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>niryo_robot_program_player</name>
  <version>5.5.0</version>
  <description>Provides an interface for the button box on serial bus</description>
  <maintainer email="i.ambit@niryo.com">Isaac Ambit Brao</maintainer>

  <license>GPLv3</license>
  <author>Isaac Ambit Brao</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>niryo_robot_msgs</build_depend>
  <build_depend>niryo_robot_programs_manager_v2</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>niryo_robot_database</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>common</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>niryo_robot_msgs</build_export_depend>
  <build_export_depend>niryo_robot_programs_manager_v2</build_export_depend>
  <build_export_depend>niryo_robot_database</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>dynamixel_sdk</build_export_depend>
  <build_export_depend>common</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>niryo_robot_msgs</exec_depend>
  <exec_depend>niryo_robot_programs_manager_v2</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>niryo_robot_database</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>  
  <exec_depend>common</exec_depend>
  
  <test_depend>rostest</test_depend>
  <test_depend>code_coverage</test_depend>
  <test_depend>roslint</test_depend>
</package>
